--- a/projet-video-game/index.html
+++ b/projet-video-game/index.html
@@ -6,8 +6,11 @@
         <title>JS</title>
     </head>
     <body>
-        <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
-
-        <script src="script.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/p5.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1/lib/addons/p5.sound.min.js"></script>
+                
+        <script src="https://p5play.org/v3/planck.min.js"></script>
+        <script src="https://p5play.org/v3/p5play.js"></script>        
+        <script src="app.js"></script>
     </body>
 </html>
